# Pacific

./: .env.example  .gitignore  README.md  package-lock.json  package.json  progress.md  tsconfig.base.json
.github/workflows/: deploy.yml
apps/api/: package.json
apps/api/src/: auth.ts  avatar-lookup.ts  config.ts  db.ts  local-api-store.ts  server.ts  shooter-local-store.ts  walrus.ts
apps/indexer/: Cargo.toml
apps/indexer/migrations/00000000000000_init/: down.sql  up.sql
apps/indexer/src/: main.rs
apps/web/: package.json  tsconfig.json  vite.config.mts
apps/web/public/unity-webgl/: index.html
apps/web/public/unity-webgl/UnityAvatarGame_BurstDebugInformation_DoNotShip/Data/Plugins/: lib_burst_generated.txt
apps/web/src/: App.tsx  dApp-kit.ts  env.ts  index.css  main.tsx
apps/web/src/components/: AvatarRuntimeCanvas.tsx  ParkourWorldCanvas.tsx  SiteTabs.tsx
apps/web/src/lib/: avatar-animation-controller.ts  avatar-chain.ts  avatar-runtime.ts  backend-avatar.ts  on-chain-avatar.ts  parkour-controller.ts  parkour-course.ts  parkour-room.ts  parkour-save.ts  play-world.ts  player-controller.ts  prepared-humanoid-animation-clips.ts  published-avatar.ts  runtime-animation-config.ts  runtime-animation-library.ts  session.ts  shooter-character-presets.ts  usePublishedAvatar.ts  wallet-signer.ts  walrus-storage.ts  world-entry.ts
apps/web/src/pages/: UnityPage.tsx
infra/walrus/: README.md  gateway.cache.json  relay.env.example
